Bug 1151186 part.1 Don't reset IME enabled state after focus is changed by JS during setting focus r=enndeakin